--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <h1>
-            This is the HTML file
-        </h1>
-    </head>
-    <body>
-
-    </body>
+  <head>
+  </head>
+  <body>
+      <h1> The Part below From Index.Js </h1>
+      <div id="fromjs"></div>
+  </body>
 </html>
