--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
+  <head> </head>
   <body>
-      <h1> The Part below From Index.Js </h1>
-      <div id="fromjs"></div>
+    <div id="fromjs"></div>
   </body>
 </html>
