--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <title>JSX Basics</title>
+    <h1 style="color: red">
+      Welcome to JSX Basics
+    </h1>
+  </head>
   <body>
     <div id="fromjs"></div>
   </body>
