--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <h1> My First HTML Page</h1>
+    <title>
+      New React App
+    </title>
   </head>
-  <body>
-      <h1> The Part below From Index.Js </h1>
-      <div id="fromjs"></div>
-  </body>
+  <body></body>
 </html>
